# Pointcloud_box_volume

./: CMakeLists.txt
catkin_ws/TEst/1/: plan_3.pcd
catkin_ws/Vederi/: plan_izolat_1.pcd  vedere_1.pcd  vedere_2.pcd
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws/devel/include/openni2_camera/: OpenNI2Config.h
catkin_ws/devel/include/pcl_tutorial/: passthrough_filter_nodeConfig.h
catkin_ws/devel/lib/openni2_camera/: list_devices  openni2_camera_node  test_wrapper
catkin_ws/devel/lib/pcl_tutorial/: compute_volume_node  passthrough_filter_node  plane_segmentation_node  trianglemesh_node  voxel_filter_node
catkin_ws/devel/lib/pkgconfig/: openni2_camera.pc  openni2_launch.pc  pcl_tutorial.pc
catkin_ws/devel/lib/python2.7/dist-packages/openni2_camera/cfg/: OpenNI2Config.py
catkin_ws/devel/lib/python2.7/dist-packages/openni2_launch/: __init__.py
catkin_ws/devel/lib/python2.7/dist-packages/pcl_tutorial/cfg/: passthrough_filter_nodeConfig.py
catkin_ws/devel/share/openni2_camera/cmake/: openni2_camera-msg-extras.cmake  openni2_cameraConfig.cmake
catkin_ws/devel/share/openni2_launch/cmake/: openni2_launchConfig.cmake
catkin_ws/devel/share/pcl_tutorial/cmake/: pcl_tutorialConfig.cmake
catkin_ws/devel/share/pcl_tutorial/docs/: passthrough_filter_nodeConfig-usage.dox  passthrough_filter_nodeConfig.dox  passthrough_filter_nodeConfig.wikidoc
catkin_ws/devel/share/roseus/ros/openni2_camera/: manifest.l
catkin_ws/src/pcl_demos/: CMakeLists.txt  README.txt
catkin_ws/src/pcl_demos/Final/: compute_volume.cpp  compute_volume_2.cpp  compute_volume_3.cpp  create_planes.cpp  distante_final.cpp  linii_final.cpp  proiectii_final.cpp
catkin_ws/src/pcl_demos/Intersectii/: find_line_all.cpp  intersectii_find_line.cpp  intersectii_find_point.cpp
catkin_ws/src/pcl_demos/project_inliers/: get_min_max.cpp  project_inliers.cpp  project_inliers_concat.cpp  project_inliers_file.cpp  project_lines.cpp
catkin_ws/src/pcl_demos/registration/: template_matching.cpp
catkin_ws/src/pcl_demos/segmentation/: euclidean_cluster_extraction.cpp  plane_segmentation.cpp
catkin_ws/src/pcl_tutorial/: CMakeLists.txt
catkin_ws/src/pcl_tutorial/cfg/: compute_volume_node.cfg  passthrough_filter_node.cfg  rviz.rviz
catkin_ws/src/pcl_tutorial/launch/: tutorial_online.launch  tutorial_online_pico.launch
catkin_ws/src/pcl_tutorial/src/: compute_volume_3.cpp  compute_volume_3_nou.cpp  compute_volume_node.cpp  compute_volume_node_copy.cpp  compute_volume_node_work.cpp  passthrough_filter_node.cpp  test_compute.cpp  test_compute_2.cpp
